--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 	<groupId>org.springframework.build</groupId>
 	<artifactId>aws-maven</artifactId>
 	<packaging>jar</packaging>
-	<version>6.0.0.BUILD-SNAPSHOT</version>
+	<version>6.0.0</version>
 	<name>Amazon Web Services S3 Maven Wagon Support</name>
 	<description>Standard Maven wagon support for s3:// urls</description>
 
@@ -120,8 +120,6 @@
 		</plugins>
 	</build>
 
-	<url>https://github.com/spring-projects/aws-maven</url>
-
 	<inceptionYear>2007</inceptionYear>
 
 	<licenses>
@@ -133,31 +131,20 @@
 	</licenses>
 
 	<scm>
-		<connection>scm:git:https://github.com/spring-projects/aws-maven.git</connection>
+		<connection>scm:git:https://github.com/asoview/aws-maven.git</connection>
 		<url>https://github.com/spring-projects/aws-maven</url>
 	</scm>
 
-	<organization>
-		<name>Spring Framework</name>
-		<url>http://spring.io</url>
-	</organization>
-
-	<ciManagement>
-		<system>Bamboo</system>
-		<url>https://build.springsource.org/browse/BUILD-AWSMAVEN</url>
-	</ciManagement>
-
 	<issueManagement>
 		<system>Github</system>
-		<url>https://github.com/spring-projects/aws-maven/issues</url>
+		<url>https://github.com/asoview/aws-maven/issues</url>
 	</issueManagement>
 
-	<developers>
-		<developer>
-			<id>nebhale</id>
-			<name>Ben Hale</name>
-			<email>bhale@gopivotal.com</email>
-		</developer>
-	</developers>
+	<distributionManagement>
+		<repository>
+			<id>bintray-maven-repo</id>
+			<url>https://api.bintray.com/maven/asoview-tech/maven/aws-maven/;publish=1</url>
+		</repository>
+	</distributionManagement>
 
 </project>
