--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>org.springframework.build</groupId>
+	<groupId>com.asoview.aws-maven</groupId>
 	<artifactId>aws-maven</artifactId>
 	<packaging>jar</packaging>
 	<version>6.0.0</version>
